fix sidebar collapse

--- a/firefox/userChrome.css
+++ b/firefox/userChrome.css
@@ -72,6 +72,16 @@
   --splitter-width: var(--shimmer-sidebar-splitter-width) !important;
 }
 
+/*? add margin to left of browser when sidebar hidden */
+#sidebar-box[hidden="true"] ~ #tabbrowser-tabpanels {
+  padding-left: 3px !important;
+}
+
+#tabbrowser-tabpanels,
+#sidebar-box {
+  background: rgba(0, 0, 0, 0) !important;
+}
+
 /*? hide spacers when sidebery open */
 @media (-moz-bool-pref: "shimmer.native-vertical-tabs") {
   #TabsToolbar .titlebar-spacer {
@@ -82,66 +92,44 @@
   display: none;
 }
 
+#sidebar-close {
+  margin-right: 0 !important;
+}
+
 /*? collapsing sidebar */
-@media not (-moz-bool-pref: "shimmer.disable-collapsing-sidebar") {
-  #sidebar-box[sidebarcommand="_3c078156-979c-498b-8990-85f7987dd929_-sidebar-action"]:hover {
-    width: var(--shimmer-cbar-expanded-width) !important;
-    transition: width 0.25s cubic-bezier(0.075, 0.82, 0.165, 1) !important;
-  }
+#sidebar-wrapper,
+#sidebar-box {
+  min-width: 0 !important;
+}
 
-  #sidebar-box[sidebarcommand="_3c078156-979c-498b-8990-85f7987dd929_-sidebar-action"] {
-    min-width: 0 !important;
-    z-index: 999 !important;
-  }
+#sidebar-wrapper {
+  display: flex !important;
+  z-index: 999 !important;
+  position: absolute !important;
+  left: 0 !important;
+  top: 0 !important;
+  height: 100% !important;
+  transition: width 0.25s cubic-bezier(0.075, 0.82, 0.165, 1) !important;
+}
 
-  #sidebar-box[sidebarcommand="_3c078156-979c-498b-8990-85f7987dd929_-sidebar-action"]:not(
-      :hover
-    ) {
-    width: var(--shimmer-cbar-collapsed-width) !important;
-    transition: width 0.25s cubic-bezier(0.075, 0.82, 0.165, 1) !important;
-  }
+#sidebar-box {
+  width: var(--shimmer-cbar-collapsed-width) !important;
+  transition: width 0.25s cubic-bezier(0.075, 0.82, 0.165, 1) !important;
+}
 
-  #sidebar-box[sidebarcommand="_3c078156-979c-498b-8990-85f7987dd929_-sidebar-action"]:not(
-      :hover
-    )
-    ~ #tabbrowser-tabbox {
-    transition: margin 0.25s cubic-bezier(0.075, 0.82, 0.165, 1) !important;
-  }
+#sidebar-box {
+  height: 100% !important;
+}
 
-  #sidebar-box[sidebarcommand="_3c078156-979c-498b-8990-85f7987dd929_-sidebar-action"]
-    ~ #tabbrowser-tabbox {
-    transition: margin 0.25s cubic-bezier(0.075, 0.82, 0.165, 1) !important;
-  }
+#sidebar-wrapper:hover,
+#sidebar-wrapper:hover #sidebar-box {
+  width: var(--shimmer-cbar-expanded-width) !important;
+}
 
-  @media (-moz-bool-pref: "shimmer.sidebar-right-side") {
-    #sidebar-box[sidebarcommand="_3c078156-979c-498b-8990-85f7987dd929_-sidebar-action"]
-      ~ #tabbrowser-tabbox {
-      margin-right: calc(
-        -1 * var(--shimmer-cbar-expanded-width) + var(--shimmer-cbar-collapsed-width)
-      ) !important;
-    }
+#tabbrowser-tabbox {
+  margin-left: calc(var(--shimmer-cbar-collapsed-width) + 1px) !important;
+}
 
-    #sidebar-box[sidebarcommand="_3c078156-979c-498b-8990-85f7987dd929_-sidebar-action"]:not(
-        :hover
-      )
-      ~ #tabbrowser-tabbox {
-      margin-right: 0 !important;
-    }
-  }
-
-  @media not (-moz-bool-pref: "shimmer.sidebar-right-side") {
-    #sidebar-box[sidebarcommand="_3c078156-979c-498b-8990-85f7987dd929_-sidebar-action"]
-      ~ #tabbrowser-tabbox {
-      margin-left: calc(
-        -1 * var(--shimmer-cbar-expanded-width) + var(--shimmer-cbar-collapsed-width)
-      ) !important;
-    }
-
-    #sidebar-box[sidebarcommand="_3c078156-979c-498b-8990-85f7987dd929_-sidebar-action"]:not(
-        :hover
-      )
-      ~ #tabbrowser-tabbox {
-      margin-left: 0 !important;
-    }
-  }
+#sidebar-splitter {
+  display: none !important;
 }
